--- a/src/home.html
+++ b/src/home.html
@@ -5,22 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aphex Twin</title>
   <link rel="stylesheet" href="../style/style.css">
+  <link rel="shortcut icon" href="../midias/favicon.svg" type="image/x-icon">
 </head>
 <body>
   <header>
     <div class="mainLogoArea">
       <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
       <p>Aphex Twin</p>
+      <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
+
     </div>
     <nav>
+      <a href="./home.html">Home</a>
       <a href="./autor.html">Richard D. James</a>
       <a href="./discos.html">Discografia</a>
       <a href="./historico.html">Historico</a>
     </nav>
   </header>
   <div class="main">
-    <h3>+30 Discos em - 20 anos de história - +600.000.000 de ouvintes</h3>
-    <div id="logoAphexBig">
+    <div class="areaLabel">
+      <img src="../midias/favicon.svg" height="20px" alt="">
+      <h3>+30 Discos em - 20 anos de história - +600.000.000 de ouvintes</h3>
+      <img src="../midias/favicon.svg" height="20px" alt="">
+    </div>    <div id="logoAphexBig">
       <img src="../midias/aphexlogobig.jpg" alt="">
       <p>Richard David James (Limerick, 18 de agosto de 1971), conhecido profissionalmente pelo seu nome artístico Aphex Twin, é um músico, compositor e DJ britânico. Ele é conhecido por seu trabalho idiossincrático em estilos eletrônicos como techno, ambiente e jungle music. Jornalistas de múltiplas publicações incluindo Mixmag, The New York Times, NME, Fact, Clash e The Guardian creditaram James por ser um dos artistas mais importantes e influentes da música eletrônica contemporânea.</p>
     </div>
