--- a/src/agenda.html
+++ b/src/agenda.html
@@ -20,6 +20,7 @@
       <a href="./autor.html">Richard D. James</a>
       <a href="./discos.html">Discografia</a>
       <a href="./historico.html">Historico</a>
+      <a href="./agenda.html">Agenda</a>
     </nav>
   </header>
   <div class="main">  
