--- a/src/discos.html
+++ b/src/discos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="../style/style.css">
   <link rel="shortcut icon" href="../midias/favicon.svg" type="image/x-icon">
 </head>
+
 <body>
   <header>
     <div class="mainLogoArea">
@@ -18,18 +20,63 @@
       <a href="./autor.html">Richard D. James</a>
       <a href="./discos.html">Discografia</a>
       <a href="./historico.html">Historico</a>
+      <a href="./agenda.html">Agenda</a>
+
     </nav>
   </header>
   <div class="main">
-    <h3>+30 Discos em - 20 anos de história - +600.000.000 de ouvintes</h3>
-    <div id="logoAphexBig">
-      <img src="../midias/aphexlogobig.jpg" alt="">
-      <p>Richard David James (Limerick, 18 de agosto de 1971), conhecido profissionalmente pelo seu nome artístico Aphex Twin, é um músico, compositor e DJ britânico. Ele é conhecido por seu trabalho idiossincrático em estilos eletrônicos como techno, ambiente e jungle music. Jornalistas de múltiplas publicações incluindo Mixmag, The New York Times, NME, Fact, Clash e The Guardian creditaram James por ser um dos artistas mais importantes e influentes da música eletrônica contemporânea.</p>
+    <div class="areaLabel">
+      <img src="../midias/favicon.svg" height="20px" alt="">
+      <h3>Discos e Singles</h3>
+      <img src="../midias/favicon.svg" height="20px" alt="">
     </div>
-    <div id="sobreRichard">
-      <img width="400px" src="../midias/richardjames.jpg" alt="">
-      <p>James foi criado em Cornwall e começou a atuar como DJ em festas e clubes gratuitos na área de South West durante a segunda metade dos anos 1980.Seu extended play (EP) de estreia, Analogue Bubblebath, lançado em 1991 através da Mighty Force Records, trouxe James seus primeiros fãs; ele começou a se apresentar em todo o Reino Unido e na Europa Continental. James co-fundou a gravadora independente Rephlex Records no mesmo ano. Seu álbum de estreia Selected Ambient Works 85–92 (1992), lançado pela gravadora alemã Apollo, obteve grande aclamação crítica e popular. James assinou com a Warp ao final de 1992 e posteriormente lançou os álbuns ...I Care Because You Do (1995) e Richard D. James Album (1996), bem como os singles "Come to Daddy" (1997) e "Windowlicker" (1999), que foram acompanhados por videoclipes dirigidos por Chris Cunningham e trouxeram a James uma atenção internacional significativamente maior.</p>
+
+    <div class="discos">
+      <img src="https://m.media-amazon.com/images/I/51TOvM8vU7L._UF1000,1000_QL80_.jpg" alt="">
+      <div class="textArea">
+        <h3>Selected Ambient Works 85-92</h3>
+        <p>Este álbum é considerado um marco na música eletrônica, apresentando uma combinação perfeita de texturas
+          etéreas e batidas hipnóticas. A mistura de ambient e techno estabelece Aphex Twin como um pioneiro do gênero.
+        </p>
+      </div>
     </div>
+    <div class="discos">
+      <img src="https://m.media-amazon.com/images/I/71LSLyIbCvL._AC_UF1000,1000_QL80_.jpg" alt="">
+      <div class="textArea">
+        <h3>Richard D. James Album</h3>
+        <p>Lançado em 1996, este álbum é uma coleção ousada de composições complexas que vão do melódico ao
+          experimental. É aqui que James mostra sua habilidade em criar faixas emocionalmente carregadas e tecnicamente
+          impressionantes.</p>
+      </div>
+    </div>
+    <div class="discos">
+      <img src="https://m.media-amazon.com/images/I/41BGQHT1ZEL._UF1000,1000_QL80_.jpg" alt="">
+      <div class="textArea">
+        <h3>I Care Because You Do</h3>
+        <p>Este trabalho, lançado em 1995, apresenta um lado mais sombrio e perturbador de Aphex Twin. A combinação de
+          sons dissonantes e melodias inquietantes resulta em uma experiência auditiva única e provocativa.</p>
+      </div>
+    </div>
+
+    <div class="discos">
+      <img src="https://m.media-amazon.com/images/I/91V5v233EuL._AC_UF1000,1000_QL80_.jpg" alt="">
+      <div class="textArea">
+        <h3>Drukqs</h3>
+        <p>Lançado em 2001, "Drukqs" é uma obra ambiciosa que combina música eletrônica com piano clássico. O álbum é
+          uma jornada eclética, apresentando tanto composições complexas quanto momentos mais introspectivos.</p>
+      </div>
+    </div>
+
+    <div class="discos">
+      <img src="https://i.scdn.co/image/ab67616d0000b2736ea96ba633bead24af562890" alt="">
+      <div class="textArea">
+        <h3>Syro</h3>
+        <p>Este álbum, lançado em 2014, marca o retorno de Aphex Twin após um hiato de 13 anos. "Syro" é uma mistura
+          refinada de sons e ritmos, mantendo a inovação característica de James, ao mesmo tempo em que mostra uma
+          maturidade artística impressionante.</p>
+      </div>
+    </div>
+
   </div>
   <footer>
     <img src="../midias/gif.gif" alt="">
@@ -37,4 +84,5 @@
     <img src="../midias/gif.gif" alt="">
   </footer>
 </body>
+
 </html>
