--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="../style/style.css">
   <link rel="shortcut icon" href="../midias/favicon.svg" type="image/x-icon">
 </head>
+
 <body>
   <header>
     <div class="mainLogoArea">
@@ -20,6 +22,7 @@
       <a href="./autor.html">Richard D. James</a>
       <a href="./discos.html">Discografia</a>
       <a href="./historico.html">Historico</a>
+      <a href="./agenda.html">Agenda</a>
     </nav>
   </header>
   <div class="main">
@@ -27,13 +30,26 @@
       <img src="../midias/favicon.svg" height="20px" alt="">
       <h3>+30 Discos em - 20 anos de história - +600.000.000 de ouvintes</h3>
       <img src="../midias/favicon.svg" height="20px" alt="">
-    </div>    <div id="logoAphexBig">
+    </div>
+    <div id="logoAphexBig">
       <img src="../midias/aphexlogobig.jpg" alt="">
-      <p>Richard David James (Limerick, 18 de agosto de 1971), conhecido profissionalmente pelo seu nome artístico Aphex Twin, é um músico, compositor e DJ britânico. Ele é conhecido por seu trabalho idiossincrático em estilos eletrônicos como techno, ambiente e jungle music. Jornalistas de múltiplas publicações incluindo Mixmag, The New York Times, NME, Fact, Clash e The Guardian creditaram James por ser um dos artistas mais importantes e influentes da música eletrônica contemporânea.</p>
+      <p>Richard David James (Limerick, 18 de agosto de 1971), conhecido profissionalmente pelo seu nome artístico Aphex
+        Twin, é um músico, compositor e DJ britânico. Ele é conhecido por seu trabalho idiossincrático em estilos
+        eletrônicos como techno, ambiente e jungle music. Jornalistas de múltiplas publicações incluindo Mixmag, The New
+        York Times, NME, Fact, Clash e The Guardian creditaram James por ser um dos artistas mais importantes e
+        influentes da música eletrônica contemporânea.</p>
     </div>
     <div id="sobreRichard">
       <img width="400px" src="../midias/richardjames.jpg" alt="">
-      <p>James foi criado em Cornwall e começou a atuar como DJ em festas e clubes gratuitos na área de South West durante a segunda metade dos anos 1980.Seu extended play (EP) de estreia, Analogue Bubblebath, lançado em 1991 através da Mighty Force Records, trouxe James seus primeiros fãs; ele começou a se apresentar em todo o Reino Unido e na Europa Continental. James co-fundou a gravadora independente Rephlex Records no mesmo ano. Seu álbum de estreia Selected Ambient Works 85–92 (1992), lançado pela gravadora alemã Apollo, obteve grande aclamação crítica e popular. James assinou com a Warp ao final de 1992 e posteriormente lançou os álbuns ...I Care Because You Do (1995) e Richard D. James Album (1996), bem como os singles "Come to Daddy" (1997) e "Windowlicker" (1999), que foram acompanhados por videoclipes dirigidos por Chris Cunningham e trouxeram a James uma atenção internacional significativamente maior.</p>
+      <p>James foi criado em Cornwall e começou a atuar como DJ em festas e clubes gratuitos na área de South West
+        durante a segunda metade dos anos 1980.Seu extended play (EP) de estreia, Analogue Bubblebath, lançado em 1991
+        através da Mighty Force Records, trouxe James seus primeiros fãs; ele começou a se apresentar em todo o Reino
+        Unido e na Europa Continental. James co-fundou a gravadora independente Rephlex Records no mesmo ano. Seu álbum
+        de estreia Selected Ambient Works 85–92 (1992), lançado pela gravadora alemã Apollo, obteve grande aclamação
+        crítica e popular. James assinou com a Warp ao final de 1992 e posteriormente lançou os álbuns ...I Care Because
+        You Do (1995) e Richard D. James Album (1996), bem como os singles "Come to Daddy" (1997) e "Windowlicker"
+        (1999), que foram acompanhados por videoclipes dirigidos por Chris Cunningham e trouxeram a James uma atenção
+        internacional significativamente maior.</p>
     </div>
   </div>
   <footer>
@@ -42,4 +58,5 @@
     <img src="../midias/gif.gif" alt="">
   </footer>
 </body>
+
 </html>
