--- a/src/autor.html
+++ b/src/autor.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="mainLogoArea">
-      <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
+      <img id="logoHeader" height="120px" src="../midias/Aphex Twin logo.gif" alt="">
       <p>Aphex Twin</p>
     </div>
     <nav>
@@ -47,13 +47,13 @@
       <img width="400px" src="../midias/discoselected.webp" alt="">
     </div>
     <div id="sobreRichard">
+      <img width="400px" src="../midias/windowlicker.avif" alt="">
       <p>Além de sua música, Aphex Twin também é famoso por sua estética visual peculiar e seu senso de humor
         subversivo. Os videoclipes e capas de seus álbuns frequentemente desafiam as expectativas, criando uma
         identidade visual única que complementa seu som. Com um legado que continua a crescer, Richard D. James
         permanece uma figura enigmática e influente, provando que a música eletrônica é um campo vasto e cheio de
         possibilidades criativas.
       </p>
-      <img width="400px" src="../midias/windowlicker.avif" alt="">
     </div>
   </div>
   <footer>
