--- a/src/discos.html
+++ b/src/discos.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="mainLogoArea">
-      <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
+      <img id="logoHeader" height="120px" src="../midias/Aphex Twin logo.gif" alt="">
       <p>Aphex Twin</p>
     </div>
     <nav>
@@ -32,48 +32,82 @@
     </div>
 
     <div class="discos">
-      <img src="https://m.media-amazon.com/images/I/51TOvM8vU7L._UF1000,1000_QL80_.jpg" alt="">
-      <div class="textArea">
-        <h3>Selected Ambient Works 85-92</h3>
-        <p>Este álbum é considerado um marco na música eletrônica, apresentando uma combinação perfeita de texturas
-          etéreas e batidas hipnóticas. A mistura de ambient e techno estabelece Aphex Twin como um pioneiro do gênero.
-        </p>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/7aNclGRxTysfh6z0d8671k?utm_source=generator" width="70%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div>
+        <img src="https://m.media-amazon.com/images/I/51TOvM8vU7L._UF1000,1000_QL80_.jpg" alt="">
+        <div class="textArea">
+          <div>
+            <h3>Selected Ambient Works 85-92</h3>
+            <p>Este álbum é considerado um marco na música eletrônica, apresentando uma combinação perfeita de texturas
+              etéreas e batidas hipnóticas. A mistura de ambient e techno estabelece Aphex Twin como um pioneiro do
+              gênero.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="discos">
-      <img src="https://m.media-amazon.com/images/I/71LSLyIbCvL._AC_UF1000,1000_QL80_.jpg" alt="">
-      <div class="textArea">
-        <h3>Richard D. James Album</h3>
-        <p>Lançado em 1996, este álbum é uma coleção ousada de composições complexas que vão do melódico ao
-          experimental. É aqui que James mostra sua habilidade em criar faixas emocionalmente carregadas e tecnicamente
-          impressionantes.</p>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/77Lae5VorRCNpgZFMW8yRO?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div>
+        <img src="https://m.media-amazon.com/images/I/71LSLyIbCvL._AC_UF1000,1000_QL80_.jpg" alt="">
+        <div class="textArea">
+          <h3>Richard D. James Album</h3>
+          <p>Lançado em 1996, este álbum é uma coleção ousada de composições complexas que vão do melódico ao
+            experimental. É aqui que James mostra sua habilidade em criar faixas emocionalmente carregadas e
+            tecnicamente
+            impressionantes.</p>
+        </div>
       </div>
     </div>
     <div class="discos">
-      <img src="https://m.media-amazon.com/images/I/41BGQHT1ZEL._UF1000,1000_QL80_.jpg" alt="">
-      <div class="textArea">
-        <h3>I Care Because You Do</h3>
-        <p>Este trabalho, lançado em 1995, apresenta um lado mais sombrio e perturbador de Aphex Twin. A combinação de
-          sons dissonantes e melodias inquietantes resulta em uma experiência auditiva única e provocativa.</p>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/6TmEZKJtPJ9mPsMBmyteCE?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div>
+        <img src="https://m.media-amazon.com/images/I/41BGQHT1ZEL._UF1000,1000_QL80_.jpg" alt="">
+        <div class="textArea">
+          <h3>I Care Because You Do</h3>
+          <p>Este trabalho, lançado em 1995, apresenta um lado mais sombrio e perturbador de Aphex Twin. A combinação de
+            sons dissonantes e melodias inquietantes resulta em uma experiência auditiva única e provocativa.</p>
+        </div>
       </div>
     </div>
 
     <div class="discos">
-      <img src="https://m.media-amazon.com/images/I/91V5v233EuL._AC_UF1000,1000_QL80_.jpg" alt="">
-      <div class="textArea">
-        <h3>Drukqs</h3>
-        <p>Lançado em 2001, "Drukqs" é uma obra ambiciosa que combina música eletrônica com piano clássico. O álbum é
-          uma jornada eclética, apresentando tanto composições complexas quanto momentos mais introspectivos.</p>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/2oJo7cB45gMVuRsaWNwDq2?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div>
+        <img src="https://m.media-amazon.com/images/I/91V5v233EuL._AC_UF1000,1000_QL80_.jpg" alt="">
+        <div class="textArea">
+          <h3>Drukqs</h3>
+          <p>Lançado em 2001, "Drukqs" é uma obra ambiciosa que combina música eletrônica com piano clássico. O álbum é
+            uma jornada eclética, apresentando tanto composições complexas quanto momentos mais introspectivos.</p>
+        </div>
       </div>
     </div>
 
     <div class="discos">
-      <img src="https://i.scdn.co/image/ab67616d0000b2736ea96ba633bead24af562890" alt="">
-      <div class="textArea">
-        <h3>Syro</h3>
-        <p>Este álbum, lançado em 2014, marca o retorno de Aphex Twin após um hiato de 13 anos. "Syro" é uma mistura
-          refinada de sons e ritmos, mantendo a inovação característica de James, ao mesmo tempo em que mostra uma
-          maturidade artística impressionante.</p>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/4mwrMLVKo940qLFXEIef4w?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div>
+        <img src="https://i.scdn.co/image/ab67616d0000b2736ea96ba633bead24af562890" alt="">
+        <div class="textArea">
+          <h3>Syro</h3>
+          <p>Este álbum, lançado em 2014, marca o retorno de Aphex Twin após um hiato de 13 anos. "Syro" é uma mistura
+            refinada de sons e ritmos, mantendo a inovação característica de James, ao mesmo tempo em que mostra uma
+            maturidade artística impressionante.</p>
+        </div>
       </div>
     </div>
 
