--- a/src/historico.html
+++ b/src/historico.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="mainLogoArea">
-      <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
+      <img id="logoHeader" height="120px" src="../midias/Aphex Twin logo.gif" alt="">
       <p>Aphex Twin</p>
     </div>
     <nav>
