--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="mainLogoArea">
-      <img height="120px" src="../midias/Aphex Twin logo.gif" alt="">
+      <img id="logoHeader" height="120px" src="../midias/Aphex Twin logo.gif" alt="">
       <p>Aphex Twin</p>
 
     </div>
@@ -29,6 +29,7 @@
       <img src="../midias/favicon.svg" height="20px" alt="">
       <h3>+30 Discos em - 20 anos de história - +600.000.000 de ouvintes</h3>
       <img src="../midias/favicon.svg" height="20px" alt="">
+      
     </div>
     <div id="logoAphexBig">
       <img src="../midias/aphexlogobig.jpg" alt="">
